Home page finished

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 </head>
 
 <body>
-    <img id="logo-img" src="../media/logo.png" alt="">
+    <img id="logo-img1" src="../media/logo1.png" alt="">
+    <img id="logo-img2" src="../media/logo2.png" alt="">
+    <img id="logo-img3" src="../media/logo3.png" alt="">
     <div id="navigation-bar">
         <ul>
             <li><a href="index.html">О компании</a></li>
@@ -24,31 +26,43 @@
         </ul>
     </div>
     <div id="about-company-container">
-        <div id="about-company-header">
-            <h1 id="about-company-title">О нас</h1>
-            <p class="about-company-txt">ООО "Солодок" имеет эксклюзивное право на продажу кормов Grand Group For Fish
-                Feed
-                Manufacturing на территории Российской Федерации.</p>
-            <div id="about-company-video-container"><iframe id="about-company-video"
-                    src="https://www.youtube.com/embed/soDokw2t2Wg"></iframe></div>
-            <p class="about-company-txt">«Гранд Фиш Фид» считается одной из новейших компаний в области производства и
-                поставок водных кормов в Египте.
-                Grand стремится стать лидером в индустрии кормов для водных животных и
-                внести значительный вклад в развитие сектора аквакультуры на местном, региональном и
-                международном уровнях.</p>
+        <h1 id="about-company-title">О нас</h1>
+        <p class="about-company-txt">ООО "Солодок" имеет эксклюзивное право на продажу кормов Grand Group For Fish
+            Feed
+            Manufacturing на территории Российской Федерации.</p>
+        <div id="about-company-video-container"><iframe id="about-company-video"
+                src="https://www.youtube.com/embed/soDokw2t2Wg"></iframe></div>
+    </div>
+    <div id="details-container">
+        <div id="details-content">
+            <h2 class="details-title">Продукция</h2>
+            <p class="details-txt">«Гранд Фиш Фид» считается одной из новейших компаний в области производства и
+                поставок кормов для рыб в Египте.
+                Grand стремится достичь лидерства в индустрии кормов для водных животных и внести значительный вклад в
+                развитие сектора аквакультуры на местном, региональном и международном уровнях.
+                <a href="#">Подробнее</a>
+            </p>
+            <h2 class="details-title">Контроль качества</h2>
+            <p class="details-txt">Чтобы подтвердить непрерывность (устойчивость) предоставления наилучшего продукта,
+                Гранд построил самую специализированную лабораторию, которая работает под наблюдением
+                элитных экспертов, поскольку все необходимые образцы-тесты систематически проводятся для всех
+                ингредиентов и всех конечных продуктов.
+                Гранд является первой египетской компанией, которая владеет поточной системой NIR для облегчения
+                непрерывного контроля
+                с полной прозрачностью (очисткой) и точностью качества продукции. <a href="#">Подробнее</a></p>
         </div>
     </div>
     <footer>
         <div id="contact-us">
             <h2 id="contact-us-header">Свяжитесь с нами</h2>
-            <p>ул. Нахимова д. 11, лит. А , комн. 207</p>
-            <p>Санкт-Петербург, 199397</p>
+            <p class="contacts-address-txt">ул. Нахимова д. 11, лит. А , комн. 207</p>
+            <p class="contacts-address-txt">Санкт-Петербург, 199397</p>
             <div id="contacts">
                 <div class="contacts-column">
-                    <p>Телефон:</p>
-                    <p>Телефон:</p>
-                    <p>Телефон:</p>
-                    <p>Почта:</p>
+                    <p class="contacts-column-title">Телефон:</p>
+                    <p class="contacts-column-title">Телефон:</p>
+                    <p class="contacts-column-title">Телефон:</p>
+                    <p class="contacts-column-title">Почта:</p>
                 </div>
                 <div class="contacts-column">
                     <p class="contacts-column-ref"><a href="tel: +20220650018">+7(911)2135577</a></p>
