--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </div>
     <div id="about-company-container">
         <h1 id="about-company-title">О нас</h1>
+        <img id="about-company-logo" src="../media/logo3.png" alt="">
         <p class="about-company-txt">ООО "Солодок" имеет эксклюзивное право на продажу кормов Grand Group For Fish
             Feed
             Manufacturing на территории Российской Федерации.</p>
