--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-    <img id="logo-img1" src="../media/logo1.png" alt="">
-    <img id="logo-img2" src="../media/logo2.png" alt="">
-    <img id="logo-img3" src="../media/logo3.png" alt="">
+    <img id="logo-img1" src="https://github.com/AliasNe0/Solodok/blob/main/media/logo1.png" alt="">
+    <img id="logo-img2" src="https://github.com/AliasNe0/Solodok/blob/main/media/logo2.png" alt="">
+    <img id="logo-img3" src="https://github.com/AliasNe0/Solodok/blob/main/media/logo3.png" alt="">
     <div id="navigation-bar">
         <ul>
             <li><a href="index.html">О компании</a></li>
@@ -27,7 +27,7 @@
     </div>
     <div id="about-company-container">
         <h1 id="about-company-title">О нас</h1>
-        <img id="about-company-logo" src="../media/logo3.png" alt="">
+        <img id="about-company-logo" src="https://github.com/AliasNe0/Solodok/blob/main/media/logo3.png" alt="">
         <p class="about-company-txt">ООО "Солодок" имеет эксклюзивное право на продажу кормов Grand Group For Fish
             Feed
             Manufacturing на территории Российской Федерации.</p>
