--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Главная | ООО "Солодок"</title>
+    <title>Продукция | ООО "Солодок"</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="description" content="Solodok LLC - About Company">
     <meta name="keywords" content="Solodok, LLC, About Company">
@@ -26,32 +26,26 @@
             <div style="clear: both;"></div>
         </ul>
     </div>
-    <div id="about-company-container">
-        <h1 id="about-company-title">О нас</h1>
-        <img id="about-company-logo" src="media/logo3.png" alt="">
-        <p class="about-company-txt">ООО "Солодок" имеет эксклюзивное право на продажу кормов Grand Group For Fish
-            Feed
-            Manufacturing на территории Российской Федерации.</p>
-        <div id="about-company-video-container"><iframe id="about-company-video"
-                src="https://www.youtube.com/embed/soDokw2t2Wg"></iframe></div>
+    <div id="products-container">
+        <div id="products-header">
+            <h1 id="products-title">Продукция</h1>
+        </div>
     </div>
     <div id="details-container">
         <div id="details-content">
-            <h2 class="details-title">Продукция</h2>
-            <p class="details-txt">«Гранд Фиш Фид» считается одной из новейших компаний в области производства и
-                поставок кормов для рыб в Египте.
-                Grand стремится достичь лидерства в индустрии кормов для водных животных и внести значительный вклад в
-                развитие сектора аквакультуры на местном, региональном и международном уровнях.
-                <a href="#">Подробнее</a>
+            <h2 class="details-title">Процесс производства и оборудование</h2>
+            <p class="details-txt">Grand Group владеет новейшей линией по производству рыбных кормов на всех этапах
+                производства, начиная с использования самой передовой немецкой технологии измельчения “Tietjen” и
+                новейшего американского экструдера “Wenger X 185”, который полностью автоматизирован. Операция обработки
+                включает блок предварительной подготовки перед экструдером.
             </p>
-            <h2 class="details-title">Контроль качества</h2>
-            <p class="details-txt">Чтобы подтвердить непрерывность (устойчивость) предоставления наилучшего продукта,
-                Гранд построил самую специализированную лабораторию, которая работает под наблюдением
-                элитных экспертов, поскольку все необходимые образцы-тесты систематически проводятся для всех
-                ингредиентов и всех конечных продуктов.
-                Гранд является первой египетской компанией, которая владеет поточной системой NIR для облегчения
-                непрерывного контроля
-                с полной прозрачностью (очисткой) и точностью качества продукции. <a href="#">Подробнее</a></p>
+            <h2 class="details-title">Характеристики кормов</h2>
+            <h3 class="products-file-name">Файл 1</h3>
+            <object class="products-file" data="media/file1.pdf"></object>
+            <h3 class="products-file-name">Файл 2</h3>
+            <object class="products-file" data="media/file2.pdf"></object>
+            <h3 class="products-file-name">Файл 3</h3>
+            <object class="products-file" data="media/file3.pdf"></object>
         </div>
     </div>
     <footer>
