--- a/quality.html
+++ b/quality.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Главная | ООО "Солодок"</title>
+    <title>Контроль качества | ООО "Солодок"</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="description" content="Solodok LLC - About Company">
     <meta name="keywords" content="Solodok, LLC, About Company">
@@ -26,32 +26,32 @@
             <div style="clear: both;"></div>
         </ul>
     </div>
-    <div id="about-company-container">
-        <h1 id="about-company-title">О нас</h1>
-        <img id="about-company-logo" src="media/logo3.png" alt="">
-        <p class="about-company-txt">ООО "Солодок" имеет эксклюзивное право на продажу кормов Grand Group For Fish
-            Feed
-            Manufacturing на территории Российской Федерации.</p>
-        <div id="about-company-video-container"><iframe id="about-company-video"
-                src="https://www.youtube.com/embed/soDokw2t2Wg"></iframe></div>
+    <div id="quality-container">
+        <div id="quality-header">
+            <h1 id="quality-title">Контроль качества</h1>
+        </div>
     </div>
     <div id="details-container">
-        <div id="details-content">
-            <h2 class="details-title">Продукция</h2>
-            <p class="details-txt">«Гранд Фиш Фид» считается одной из новейших компаний в области производства и
-                поставок кормов для рыб в Египте.
-                Grand стремится достичь лидерства в индустрии кормов для водных животных и внести значительный вклад в
-                развитие сектора аквакультуры на местном, региональном и международном уровнях.
-                <a href="#">Подробнее</a>
+        <div id="quality-content">
+            <h2 class="details-title">План контроля качества</h2>
+            <p class="quality-txt">Гранд применяет систему управления качеством во всех отделах
+                и недавно Гранд получил четыре сертификата ISO:</p>
+            <ul id="quality-list">
+                <li>ISO 9001:2015/Системы менеджмента качества.</li>
+                <li>ISO 14001:2015/Системы экологического менеджмента.</li>
+                <li>ISO 22000:2018/Системы управления безопасностью пищевых продуктов.</li>
+                <li>ISO 45001:2018/Системы управления охраной труда и промышленной безопасностью.</li>
+            </ul>
+            <div id="quality-certificates-container">
+                <img class="quality-certificate" src="media/certificate1.jpg" alt="">
+                <img class="quality-certificate" src="media/certificate2.jpg" alt="">
+                <img class="quality-certificate" src="media/certificate3.jpg" alt="">
+                <img class="quality-certificate" src="media/certificate4.jpg" alt="">
+            </div>
+            <p>В дополнение к сертификату GMP+ (Надлежащая производственная практика), чтобы подтвердить превосходство
+                Гранд в производстве водных кормов в соответствии с высочайшими стандартами качества и безопасности
+                пищевых продуктов.
             </p>
-            <h2 class="details-title">Контроль качества</h2>
-            <p class="details-txt">Чтобы подтвердить непрерывность (устойчивость) предоставления наилучшего продукта,
-                Гранд построил самую специализированную лабораторию, которая работает под наблюдением
-                элитных экспертов, поскольку все необходимые образцы-тесты систематически проводятся для всех
-                ингредиентов и всех конечных продуктов.
-                Гранд является первой египетской компанией, которая владеет поточной системой NIR для облегчения
-                непрерывного контроля
-                с полной прозрачностью (очисткой) и точностью качества продукции. <a href="#">Подробнее</a></p>
         </div>
     </div>
     <footer>
