--- a/contacts.html
+++ b/contacts.html
@@ -30,7 +30,7 @@
         <div id="contacts-content">
             <h2 class="details-title">Свяжитесь с нами</h2>
             <p class="details-txt">Вы можете задать любой вопрос с помощью формы ниже:</p>
-            <form id="contacts-form" action="mailto: solodok7@gmail.com" method="POST" enctype="multipart/form-data"
+            <form id="contacts-form" action="https://formsubmit.co/solodok7@gmail.com" method="POST" enctype="multipart/form-data"
                 name="EmailForm">
                 <div class="contacts-form-column">
                     <p class="contacts-fname">Имя:</p>
