--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 поставок кормов для рыб в Египте.
                 Grand стремится достичь лидерства в индустрии кормов для водных животных и внести значительный вклад в
                 развитие сектора аквакультуры на местном, региональном и международном уровнях.
-                <a href="#">Подробнее</a>
+                <a href="products.html">Подробнее</a>
             </p>
             <h2 class="details-title">Контроль качества</h2>
             <p class="details-txt">Чтобы подтвердить непрерывность (устойчивость) предоставления наилучшего продукта,
@@ -51,7 +51,7 @@
                 ингредиентов и всех конечных продуктов.
                 Гранд является первой египетской компанией, которая владеет поточной системой NIR для облегчения
                 непрерывного контроля
-                с полной прозрачностью (очисткой) и точностью качества продукции. <a href="#">Подробнее</a></p>
+                с полной прозрачностью (очисткой) и точностью качества продукции. <a href="quality.html">Подробнее</a></p>
         </div>
     </div>
     <footer>
