--- a/products.html
+++ b/products.html
@@ -40,17 +40,15 @@
                 включает блок предварительной подготовки перед экструдером.
             </p>
             <h2 class="details-title">Характеристики кормов</h2>
-            <h3 class="products-file-name">Файл 1</h3>
+            <h3 class="products-file-name">Состав корма. Нормы кормления в зависимости от температурного режима.Воздействие  на окружающую среду.</h3>
             <object class="products-file" data="media/file1.pdf"></object>
-            <h3 class="products-file-name">Файл 2</h3>
+            <h3 class="products-file-name">Состав корма  с добавлением минералов и витаминов.</h3>
             <object class="products-file" data="media/file2.pdf"></object>
-            <h3 class="products-file-name">Файл 3</h3>
-            <object class="products-file" data="media/file3.pdf"></object>
         </div>
     </div>
     <footer>
         <div id="contact-us">
-            <h2 id="contact-us-header">Свяжитесь с нами</h2>
+            <h2 id="contact-us-header">Контакты</h2>
             <p class="contacts-address-txt">ул. Нахимова д. 11, лит. А , комн. 207</p>
             <p class="contacts-address-txt">Санкт-Петербург, 199397</p>
             <div id="contacts">
@@ -62,10 +60,10 @@
                     <p class="contacts-column-title">Сайт:</p>
                 </div>
                 <div class="contacts-column">
-                    <p class="contacts-column-ref"><a href="tel: +20220650018">+7(911)2135577</a></p>
-                    <p class="contacts-column-ref"><a href="tel: +20201203333649">+7(911)1160193</a></p>
-                    <p class="contacts-column-ref"><a href="tel: +20220650066">+7(995)6002211</a></p>
-                    <p class="contacts-column-ref"><a href="mailto: info@grand-aqua.com">solodok7@gmail.com</a></p>
+                    <p class="contacts-column-ref"><a href="tel: +79112135577">+7(911)2135577</a></p>
+                    <p class="contacts-column-ref"><a href="tel: +79111160193">+7(911)1160193</a></p>
+                    <p class="contacts-column-ref"><a href="tel: +79956002211">+7(995)6002211</a></p>
+                    <p class="contacts-column-ref"><a href="mailto: solodok7@gmail.com">solodok7@gmail.com</a></p>
                     <p class="contacts-column-ref"><a href="grand-solodok.ru">grand-solodok.ru</a></p>
                 </div>
             </div>
