--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
     <footer>
         <div id="contact-us">
-            <h2 id="contact-us-header">Свяжитесь с нами</h2>
+            <h2 id="contact-us-header">Контакты</h2>
             <p class="contacts-address-txt">ул. Нахимова д. 11, лит. А , комн. 207</p>
             <p class="contacts-address-txt">Санкт-Петербург, 199397</p>
             <div id="contacts">
@@ -68,10 +68,10 @@
                     <p class="contacts-column-title">Сайт:</p>
                 </div>
                 <div class="contacts-column">
-                    <p class="contacts-column-ref"><a href="tel: +20220650018">+7(911)2135577</a></p>
-                    <p class="contacts-column-ref"><a href="tel: +20201203333649">+7(911)1160193</a></p>
-                    <p class="contacts-column-ref"><a href="tel: +20220650066">+7(995)6002211</a></p>
-                    <p class="contacts-column-ref"><a href="mailto: info@grand-aqua.com">solodok7@gmail.com</a></p>
+                    <p class="contacts-column-ref"><a href="tel: +79112135577">+7(911)2135577</a></p>
+                    <p class="contacts-column-ref"><a href="tel: +79111160193">+7(911)1160193</a></p>
+                    <p class="contacts-column-ref"><a href="tel: +79956002211">+7(995)6002211</a></p>
+                    <p class="contacts-column-ref"><a href="mailto: solodok7@gmail.com">solodok7@gmail.com</a></p>
                     <p class="contacts-column-ref"><a href="grand-solodok.ru">grand-solodok.ru</a></p>
                 </div>
             </div>
