--- a/contacts.html
+++ b/contacts.html
@@ -66,7 +66,7 @@
                     <p class="contacts-column-ref"><a href="tel: +79111160193">+7(911)1160193</a></p>
                     <p class="contacts-column-ref"><a href="tel: +79956002211">+7(995)6002211</a></p>
                     <p class="contacts-column-ref"><a href="mailto: solodok7@gmail.com">solodok7@gmail.com</a></p>
-                    <p class="contacts-column-ref"><a href="grand-solodok.ru">grand-solodok.ru</a></p>
+                    <p class="contacts-column-ref"><a href="www.solodok-grand.com">www.solodok-grand.com</a></p>
                 </div>
             </div>
         </div>
