--- a/products.html
+++ b/products.html
@@ -40,7 +40,7 @@
                 включает блок предварительной подготовки перед экструдером.
             </p>
             <h2 class="details-title">Характеристики кормов</h2>
-            <h3 class="products-file-name">Состав корма. Нормы кормления в зависимости от температурного режима.Воздействие  на окружающую среду.</h3>
+            <h3 class="products-file-name">Состав корма. Нормы кормления в зависимости от температурного режима. Воздействие на окружающую среду.</h3>
             <object class="products-file" data="media/file1.pdf"></object>
             <h3 class="products-file-name">Состав корма  с добавлением минералов и витаминов.</h3>
             <object class="products-file" data="media/file2.pdf"></object>
@@ -64,7 +64,7 @@
                     <p class="contacts-column-ref"><a href="tel: +79111160193">+7(911)1160193</a></p>
                     <p class="contacts-column-ref"><a href="tel: +79956002211">+7(995)6002211</a></p>
                     <p class="contacts-column-ref"><a href="mailto: solodok7@gmail.com">solodok7@gmail.com</a></p>
-                    <p class="contacts-column-ref"><a href="grand-solodok.ru">grand-solodok.ru</a></p>
+                    <p class="contacts-column-ref"><a href="www.solodok-grand.com">www.solodok-grand.com</a></p>
                 </div>
             </div>
         </div>
