Products and Quality pages updated

--- a/products.html
+++ b/products.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Solodok LLC - About Company">
     <meta name="keywords" content="Solodok, LLC, About Company">
     <meta name="author" content="Ilia Chichkanov">
-    <link id="tab-logo" rel="shortcut icon" type="image/x-icon" href="media/favicon.ico"/>
+    <link id="tab-logo" rel="shortcut icon" type="image/x-icon" href="media/favicon.ico" />
 </head>
 
 <body>
@@ -40,10 +40,17 @@
                 включает блок предварительной подготовки перед экструдером.
             </p>
             <h2 class="details-title">Характеристики кормов</h2>
-            <h3 class="products-file-name">Состав корма. Нормы кормления в зависимости от температурного режима. Воздействие на окружающую среду.</h3>
-            <object class="products-file" data="media/file1.pdf"></object>
-            <h3 class="products-file-name">Состав корма  с добавлением минералов и витаминов.</h3>
-            <object class="products-file" data="media/file2.pdf"></object>
+            <h3 class="products-file-name">Состав корма. Нормы кормления в зависимости от температурного режима.
+                Воздействие на окружающую среду.</h3>
+            <object class="products-file-pc" data="media/file1.pdf" type="application/pdf"></object>
+            <p class="products-file-mobile">Ваш браузер не имеет подходящего PDF-плагина для просмотра этого файла. Вместо этого вы
+                можете <a href="media/file1.pdf">скачать файл по ссылке</a>
+            </p>
+            <h3 class="products-file-name">Состав корма с добавлением минералов и витаминов.</h3>
+            <object class="products-file-pc" data="media/file2.pdf" type="application/pdf"></object>
+            <p class="products-file-mobile">Ваш браузер не имеет подходящего PDF-плагина для просмотра этого файла. Вместо этого вы
+                можете <a href="media/file2.pdf">скачать файл по ссылке</a>
+            </p>
         </div>
     </div>
     <footer>
