--- a/products.html
+++ b/products.html
@@ -43,12 +43,12 @@
             <h3 class="products-file-name">Состав корма. Нормы кормления в зависимости от температурного режима.
                 Воздействие на окружающую среду.</h3>
             <object class="products-file-pc" data="media/file1.pdf" type="application/pdf"></object>
-            <p class="products-file-mobile">Ваш браузер не имеет подходящего PDF-плагина для просмотра этого файла. Вместо этого вы
+            <p class="products-file-mobile">Ваш браузер не имеет подходящего PDF-плагина для просмотра данного файла. Вместо этого вы
                 можете <a href="media/file1.pdf">скачать файл по ссылке</a>
             </p>
             <h3 class="products-file-name">Состав корма с добавлением минералов и витаминов.</h3>
             <object class="products-file-pc" data="media/file2.pdf" type="application/pdf"></object>
-            <p class="products-file-mobile">Ваш браузер не имеет подходящего PDF-плагина для просмотра этого файла. Вместо этого вы
+            <p class="products-file-mobile">Ваш браузер не имеет подходящего PDF-плагина для просмотра данного файла. Вместо этого вы
                 можете <a href="media/file2.pdf">скачать файл по ссылке</a>
             </p>
         </div>
