Copyrights updated; fullscreen YouTube added

--- a/contacts.html
+++ b/contacts.html
@@ -71,7 +71,7 @@
             </div>
         </div>
         <div id="copyright">
-            <p>© Copyright 2022 | Solodok LLC</p>
+            <p>© Copyright 2023 | ООО "Солодок"</p>
         </div>
     </footer>
 </body>
