--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             Feed
             Manufacturing на территории Российской Федерации.</p>
         <div id="about-company-video-container"><iframe id="about-company-video"
-                src="https://www.youtube.com/embed/soDokw2t2Wg"></iframe></div>
+                src="https://www.youtube.com/embed/soDokw2t2Wg" allow="fullscreen;"></iframe></div>
     </div>
     <div id="details-container">
         <div id="details-content">
@@ -77,7 +77,7 @@
             </div>
         </div>
         <div id="copyright">
-            <p>© Copyright 2022 | Solodok LLC</p>
+            <p>© Copyright 2023 | ООО "Солодок"</p>
         </div>
     </footer>
 </body>
