Images, text fixes; yandex set up

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <meta name="description" content="Solodok LLC - About Company">
     <meta name="keywords" content="Solodok, LLC, About Company">
     <meta name="author" content="Ilia Chichkanov">
-    <link id="tab-logo" rel="shortcut icon" type="image/x-icon" href="media/favicon.ico"/>
+    <link id="tab-logo" rel="shortcut icon" type="image/x-icon" href="media/favicon.ico" />
 </head>
 
 <body>
-    <img id="logo-img1" src="media/logo1.png" alt="">
-    <img id="logo-img2" src="media/logo2.png" alt="">
-    <img id="logo-img3" src="media/logo3.png" alt="">
+    <img id="logo-img1" src="media/logo1.png" alt="logo 1">
+    <img id="logo-img2" src="media/logo2.png" alt="logo 2">
+    <img id="logo-img3" src="media/logo3.png" alt="logo 3">
     <div id="navigation-bar">
         <ul>
             <li><a href="index.html">Главная</a></li>
@@ -29,9 +29,9 @@
     <div id="about-company-container">
         <h1 id="about-company-title">О нас</h1>
         <img id="about-company-logo" src="media/logo3.png" alt="">
-        <p class="about-company-txt">ООО "Солодок" имеет эксклюзивное право на продажу кормов Grand Group For Fish
-            Feed
-            Manufacturing на территории Российской Федерации.</p>
+        <p class="about-company-txt">ООО "Солодок" имеет эксклюзивное право на продажу кормов <a
+                href="https://grand-aqua.com/" target="_blank">Grand Group For Fish
+                Feed Manufacturing</a> на территории Российской Федерации.</p>
         <div id="about-company-video-container"><iframe id="about-company-video"
                 src="https://www.youtube.com/embed/soDokw2t2Wg" allow="fullscreen;"></iframe></div>
     </div>
@@ -51,7 +51,8 @@
                 ингредиентов и всех конечных продуктов.
                 Гранд является первой египетской компанией, которая владеет поточной системой NIR для облегчения
                 непрерывного контроля
-                с полной прозрачностью (очисткой) и точностью качества продукции. <a href="quality.html">Подробнее</a></p>
+                с полной прозрачностью (очисткой) и точностью качества продукции. <a href="quality.html">Подробнее</a>
+            </p>
         </div>
     </div>
     <footer>
