--- a/quality.html
+++ b/quality.html
@@ -14,9 +14,9 @@
 </head>
 
 <body>
-    <img id="logo-img1" src="media/logo1.png" alt="">
-    <img id="logo-img2" src="media/logo2.png" alt="">
-    <img id="logo-img3" src="media/logo3.png" alt="">
+    <img id="logo-img1" src="media/logo1.png" alt="logo 1">
+    <img id="logo-img2" src="media/logo2.png" alt="logo 2">
+    <img id="logo-img3" src="media/logo3.png" alt="logo 3">
     <div id="navigation-bar">
         <ul>
             <li><a href="index.html">Главная</a></li>
@@ -43,11 +43,11 @@
                 <li>ISO 45001:2018/Системы управления охраной труда и промышленной безопасностью.</li>
             </ul>
             <div id="quality-certificates-container">
-                <img class="quality-certificate" src="media/certificate2.jpg" alt="">
-                <img class="quality-certificate" src="media/certificate3.jpg" alt="">
-                <img class="quality-certificate" src="media/certificate4.jpg" alt="">
-                <img class="quality-certificate" src="media/certificate5.jpg" alt="">
-                <img class="quality-certificate" src="media/certificate.jpg" alt="">
+                <img class="quality-certificate" src="media/certificate2.jpg" alt="quality certificate 1">
+                <img class="quality-certificate" src="media/certificate3.jpg" alt="quality certificate 2">
+                <img class="quality-certificate" src="media/certificate4.jpg" alt="quality certificate 3">
+                <img class="quality-certificate" src="media/certificate5.jpg" alt="quality certificate 4">
+                <img class="quality-certificate" src="media/certificate.jpg" alt="quality certificate 5">
             </div>
             <p>В дополнение к сертификату GMP+ (Надлежащая производственная практика), чтобы подтвердить превосходство
                 Гранд в производстве водных кормов в соответствии с высочайшими стандартами качества и безопасности
