--- a/contacts.html
+++ b/contacts.html
@@ -14,9 +14,9 @@
 </head>
 
 <body>
-    <img id="logo-img1" src="media/logo1.png" alt="">
-    <img id="logo-img2" src="media/logo2.png" alt="">
-    <img id="logo-img3" src="media/logo3.png" alt="">
+    <img id="logo-img1" src="media/logo1.png" alt="logo 1">
+    <img id="logo-img2" src="media/logo2.png" alt="logo 2">
+    <img id="logo-img3" src="media/logo3.png" alt="logo 3">
     <div id="navigation-bar">
         <ul>
             <li><a href="index.html">Главная</a></li>
