--- a/contacts.html
+++ b/contacts.html
@@ -29,6 +29,7 @@
     <div id="details-container">
         <div id="contacts-content">
             <h2 class="details-title">Свяжитесь с нами</h2>
+            <img id="about-company-logo" src="media/logo3.png" alt="">
             <p class="details-txt">Вы можете задать любой вопрос с помощью формы ниже:</p>
             <form id="contacts-form" action="https://formsubmit.co/solodok7@gmail.com" method="POST" enctype="multipart/form-data"
                 name="EmailForm">
