--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div id="about-company-container">
         <h1 id="about-company-title">О нас</h1>
-        <img id="about-company-logo" src="media/logo3.png" alt="">
+        <img id="about-company-logo" src="media/logo-main.png" alt="">
         <p class="about-company-txt">ООО "Солодок" имеет эксклюзивное право на продажу кормов <a
                 href="https://grand-aqua.com/" target="_blank">Grand Group For Fish
                 Feed Manufacturing</a> на территории Российской Федерации.</p>
