Logo final; contacts form updated

--- a/contacts.html
+++ b/contacts.html
@@ -41,8 +41,9 @@
                     <p class="contacts-fname">Email:</p>
                     <input class="contacts-finput" type="email" name="Contact-Email">
                 </div><br><br>
-                <div class="contacts-form-column">
-                <p class="contacts-fname">Сообщение:</p>
+                <div class="contacts-form-column" id="contacts-form-message-container">
+                <p class="contacts-fname" id="contacts-fmessage-name">Сообщение:</p>
+                <div style="float: clear;"></div>
                 <textarea class="contacts-finput" id="contacts-fmessage" name="Contact-Message" rows="15"></textarea>
             </div><br><br>
                 <button type="submit" value="Submit">Отправить</button>
