--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </head>
 
 <body>
-    <img id="logo-img1" src="media/logo1.png" alt="logo 1">
-    <img id="logo-img2" src="media/logo2.png" alt="logo 2">
-    <img id="logo-img3" src="media/logo3.png" alt="logo 3">
+    <a href="https://mf-rr.ru/" target="_blank"><img id="logo-img1" src="media/logo1.png" alt="logo 1"></a>
+    <a href="https://grand-aqua.com" target="_blank"><img id="logo-img2" src="media/logo2.png" alt="logo 2"></a>
+    <a href="index.html"><img id="logo-img3" src="media/logo3.png" alt="logo 3"></a>
     <div id="navigation-bar">
         <ul>
             <li><a href="index.html">Главная</a></li>
