Metadata and img description updated

--- a/contacts.html
+++ b/contacts.html
@@ -7,16 +7,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Контакты | ООО "Солодок"</title>
     <link rel="stylesheet" href="styles.css">
-    <meta name="description" content="Solodok LLC - About Company">
-    <meta name="keywords" content="Solodok, LLC, About Company">
+    <meta name="description" content="ООО Солодок - Контакты">
+    <meta name="keywords" content="Solodok, LLC, MFRR, Grand, Fish, Feed, Trout, ООО, Солодок, МФРР, Гранд, Корм, Рыба, Форель, Contacts, Контакты">
     <meta name="author" content="Ilia Chichkanov">
     <link id="tab-logo" rel="shortcut icon" type="image/x-icon" href="media/favicon.ico"/>
 </head>
 
 <body>
-    <a href="https://mf-rr.ru/" target="_blank"><img id="logo-img1" src="media/logo1.png" alt="logo 1"></a>
-    <a href="https://grand-aqua.com" target="_blank"><img id="logo-img2" src="media/logo2.png" alt="logo 2"></a>
-    <a href="index.html"><img id="logo-img3" src="media/logo3.png" alt="logo 3"></a>
+    <a href="https://mf-rr.ru/" target="_blank"><img id="logo-img1" src="media/logo1.png" alt="Лого МФРР"></a>
+    <a href="https://grand-aqua.com" target="_blank"><img id="logo-img2" src="media/logo2.png" alt="Лого Grand"></a>
+    <a href="index.html"><img id="logo-img3" src="media/logo3.png" alt="Лого Солодок"></a>
     <div id="navigation-bar">
         <ul>
             <li><a href="index.html">Главная</a></li>
@@ -29,7 +29,7 @@
     <div id="details-container">
         <div id="contacts-content">
             <h2 class="details-title">Свяжитесь с нами</h2>
-            <img id="about-company-logo" src="media/logo-main.png" alt="">
+            <img id="about-company-logo" src="media/logo-main.png" alt="Лого Солодок">
             <p class="details-txt">Вы можете задать любой вопрос с помощью формы ниже:</p>
             <form id="contacts-form" action="https://formsubmit.co/solodok7@gmail.com" method="POST" enctype="multipart/form-data"
                 name="EmailForm">
@@ -45,6 +45,7 @@
                 <p class="contacts-fname" id="contacts-fmessage-name">Сообщение:</p>
                 <div style="float: clear;"></div>
                 <textarea class="contacts-finput" id="contacts-fmessage" name="Contact-Message" rows="15"></textarea>
+                <div style="float: clear;"></div>
             </div><br><br>
                 <button type="submit" value="Submit">Отправить</button>
             </form>
