--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Главная | ООО "Солодок"</title>
     <link rel="stylesheet" href="styles.css">
-    <meta name="description" content="Solodok LLC - About Company">
-    <meta name="keywords" content="Solodok, LLC, About Company">
+    <meta name="description" content="ООО Солодок - Главная">
+    <meta name="keywords" content="Solodok, LLC, MFRR, Grand, Fish, Feed, Trout, ООО, Солодок, МФРР, Гранд, Корм, Рыба, Форель, Main, Главная">
     <meta name="author" content="Ilia Chichkanov">
     <link id="tab-logo" rel="shortcut icon" type="image/x-icon" href="media/favicon.ico" />
 </head>
 
 <body>
-    <a href="https://mf-rr.ru/" target="_blank"><img id="logo-img1" src="media/logo1.png" alt="logo 1"></a>
-    <a href="https://grand-aqua.com" target="_blank"><img id="logo-img2" src="media/logo2.png" alt="logo 2"></a>
-    <a href="index.html"><img id="logo-img3" src="media/logo3.png" alt="logo 3"></a>
+    <a href="https://mf-rr.ru/" target="_blank"><img id="logo-img1" src="media/logo1.png" alt="Лого МФРР"></a>
+    <a href="https://grand-aqua.com" target="_blank"><img id="logo-img2" src="media/logo2.png" alt="Лого Grand"></a>
+    <a href="index.html"><img id="logo-img3" src="media/logo3.png" alt="Лого Солодок"></a>
     <div id="navigation-bar">
         <ul>
             <li><a href="index.html">Главная</a></li>
@@ -28,7 +28,7 @@
     </div>
     <div id="about-company-container">
         <h1 id="about-company-title">О нас</h1>
-        <img id="about-company-logo" src="media/logo-main.png" alt="">
+        <img id="about-company-logo" src="media/logo-main.png" alt="Лого Солодок">
         <p class="about-company-txt">ООО "Солодок" имеет эксклюзивное право на продажу кормов <a
                 href="https://grand-aqua.com/" target="_blank">Grand Group For Fish
                 Feed Manufacturing</a> на территории Российской Федерации.</p>
