Yandex metatag added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="ООО Солодок - Главная">
     <meta name="keywords" content="Solodok, LLC, MFRR, Grand, Fish, Feed, Trout, ООО, Солодок, МФРР, Гранд, Корм, Рыба, Форель, Main, Главная">
     <meta name="author" content="Ilia Chichkanov">
+	<meta name="yandex-verification" content="b2dcb9510131fb2a" />
     <link id="tab-logo" rel="shortcut icon" type="image/x-icon" href="media/favicon.ico" />
 </head>
 
