Pdf files updated and some text changed

--- a/contacts.html
+++ b/contacts.html
@@ -28,9 +28,9 @@
     </div>
     <div id="details-container">
         <div id="contacts-content">
-            <h2 class="details-title">Свяжитесь с нами</h2>
+            <h2 class="details-title">Оставьте заявку</h2>
             <img id="about-company-logo" src="media/logo-main.png" alt="Лого Солодок">
-            <p class="details-txt">Вы можете задать любой вопрос с помощью формы ниже:</p>
+            <p class="details-txt">Заполните поля формы, и мы свяжемся с вами:</p>
             <form id="contacts-form" action="https://formsubmit.co/solodok7@gmail.com" method="POST" enctype="multipart/form-data"
                 name="EmailForm">
                 <div class="contacts-form-column">
