--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <title>Главная | ООО "Солодок"</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="description" content="ООО Солодок - Главная">
-    <meta name="keywords" content="Solodok, LLC, MFRR, Grand, Fish, Feed, Trout, ООО, Солодок, МФРР, Гранд, Корм, Рыба, Форель, Main, Главная">
+    <meta name="keywords"
+        content="Solodok, LLC, MFRR, Grand, Fish, Feed, Trout, ООО, Солодок, МФРР, Гранд, Корм, Рыба, Форель, Main, Главная">
     <meta name="author" content="Ilia Chichkanov">
-	<meta name="yandex-verification" content="b2dcb9510131fb2a" />
+    <meta name="yandex-verification" content="b2dcb9510131fb2a" />
     <link id="tab-logo" rel="shortcut icon" type="image/x-icon" href="media/favicon.ico" />
 </head>
 
@@ -46,13 +47,10 @@
                 <a href="products.html">Подробнее</a>
             </p>
             <h2 class="details-title">Контроль качества</h2>
-            <p class="details-txt">Чтобы подтвердить непрерывность (устойчивость) предоставления наилучшего продукта,
-                Гранд построил самую специализированную лабораторию, которая работает под наблюдением
-                элитных экспертов, поскольку все необходимые образцы-тесты систематически проводятся для всех
-                ингредиентов и всех конечных продуктов.
-                Гранд является первой египетской компанией, которая владеет поточной системой NIR для облегчения
-                непрерывного контроля
-                с полной прозрачностью (очисткой) и точностью качества продукции. <a href="quality.html">Подробнее</a>
+            <p class="details-txt">Grand group имеет свою современную специализированную лабораторию, которая в режиме
+                реального времени выполняет анализ параметров всего поступающего сырья и конечных характеристик
+                производимых кормов. Также Grand group владеет встроенной системой NIR, которая позволяет проводить
+                непрерывный мониторинг качества корма.<a href="quality.html">Подробнее</a>
             </p>
         </div>
     </div>
