Delted text from quality page

--- a/quality.html
+++ b/quality.html
@@ -49,10 +49,10 @@
                 <img class="quality-certificate" src="media/certificate5.jpg" alt="quality certificate 4">
                 <img class="quality-certificate" src="media/certificate.jpg" alt="quality certificate 5">
             </div>
-            <p>В дополнение к сертификату GMP+ (Надлежащая производственная практика), чтобы подтвердить превосходство
+<!--             <p>В дополнение к сертификату GMP+ (Надлежащая производственная практика), чтобы подтвердить превосходство
                 Гранд в производстве водных кормов в соответствии с высочайшими стандартами качества и безопасности
                 пищевых продуктов.
-            </p>
+            </p> -->
         </div>
     </div>
     <footer>
