BingSiteAuth.xml added

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 <body>
     <a href="https://mf-rr.ru/" target="_blank"><img id="logo-img1" src="media/logo1.png" alt="Лого МФРР"></a>
     <a href="https://grand-aqua.com" target="_blank"><img id="logo-img2" src="media/logo2.png" alt="Лого Grand"></a>
-    <a href="index.html"><img id="logo-img3" src="media/logo3.png" alt="Лого Солодок"></a>
+    <a href="/"><img id="logo-img3" src="media/logo3.png" alt="Лого Солодок"></a>
     <div id="navigation-bar">
         <ul>
-            <li><a href="index.html">Главная</a></li>
+            <li><a href="/">Главная</a></li>
             <li><a href="products.html">Продукция</a></li>
             <li><a href="quality.html">Контроль качества</a></li>
             <li><a href="contacts.html">Контакты</a></li>
